implementing nav bar functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	
 	<body>
 		<nav>
-			<div class="nav-icon"><img src="resources/images/hamburger.png"></div>
+			<div class="nav-icon"><img onclick="openURL('https://www.google.com')" src="resources/images/hamburger.png"></div>
 			<div class="nav-icon"><img src="resources/images/logo.png"></div>
 			<div id="nav-center-spacer"></div>
 			<div class="nav-icon"><img src="resources/images/magnifying-glass.png"></div>
@@ -28,12 +28,12 @@
 						<!-- </div> -->
 
 						<!-- <div class="mySlides fade inactive-image"> -->
-						<img class="mySlides fade inactive-image" src="http://via.placeholder.com/640x360">
+						<img class="mySlides fade inactive-image" src="resources/images/indoor art fair.jpg">
 						<!-- <div class="text">Caption Two</div> -->
 						<!-- </div> -->
 
 						<!-- <div class="mySlides fade inactive-image"> -->
-						<img class="mySlides fade inactive-image" src="http://via.placeholder.com/640x360">
+						<img class="mySlides fade inactive-image" src="resources/images/amazon-wholesale-club-inside.jpg">
 						<!-- <div class="text">Caption Three</div> -->
 						<!-- </div> -->
 
@@ -53,7 +53,7 @@
 
 					<div id="caption-box">
 						<div class="caption fade active-caption">
-							<div class="caption-title caption-text">Amazon Wholesale</div>
+							<div class="caption-title caption-text">Amazon Wholesale Club</div>
 							<div class="caption-description caption-text">Our first facility opens in Emeryville, CA! See what we have planned for the future.</div>
 						</div>
 						<div class="caption fade inactive-caption">
@@ -77,7 +77,7 @@
 Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
 </p>
 					</div>
-					<img class ="sect-img" src="https://m.media-amazon.com/images/I/41UqZEoLeLL._AC_UL436_.jpg">
+					<img class ="sect-img" src="resources/images/initiative.jpeg">
 				</section>
 
 				<section id="s2">
